--- a/written/eLifeRevision/eLife2020.bib
+++ b/written/eLifeRevision/eLife2020.bib
@@ -1154,3 +1154,33 @@
   year={2009},
   publisher={Oxford University Press}
 }
+
+@article{hennequin2018dynamical,
+  title={The dynamical regime of sensory cortex: stable dynamics around a single stimulus-tuned attractor account for patterns of noise variability},
+  author={Hennequin, Guillaume and Ahmadian, Yashar and Rubin, Daniel B and Lengyel, M{\'a}t{\'e} and Miller, Kenneth D},
+  journal={Neuron},
+  volume={98},
+  number={4},
+  pages={846--860},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@article{palmigiano2020structure,
+  title={Structure and variability of optogenetic responses identify the operating regime of cortex},
+  author={Palmigiano, Agostina and Fumarola, Francesco and Mossing, Daniel P and Kraynyukova, Nataliya and Adesnik, Hillel and Miller, Kenneth},
+  journal={bioRxiv},
+  year={2020},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{goldman2009memory,
+  title={Memory without feedback in a neural network},
+  author={Goldman, Mark S},
+  journal={Neuron},
+  volume={61},
+  number={4},
+  pages={621--634},
+  year={2009},
+  publisher={Elsevier}
+}
