--- a/written/eLifeRevision/eLife2020.bib
+++ b/written/eLifeRevision/eLife2020.bib
@@ -1,12 +1,138 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sean Bittner at 2021-01-05 20:13:43 -0500 
+%% Created for Sean Bittner at 2021-01-07 17:25:01 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{granot2013stimulus,
+	author = {Granot-Atedgi, Einat and Tka{\v{c}}ik, Ga{\v{s}}per and Segev, Ronen and Schneidman, Elad},
+	date-added = {2021-01-07 17:24:59 -0500},
+	date-modified = {2021-01-07 17:24:59 -0500},
+	journal = {PLoS Comput Biol},
+	number = {3},
+	pages = {e1002922},
+	publisher = {Public Library of Science},
+	title = {Stimulus-dependent maximum entropy models of neural population codes},
+	volume = {9},
+	year = {2013}}
+
+@article{mlynarski2020statistical,
+	author = {M{\l}ynarski, Wiktor and Hled{\'\i}k, Michal and Sokolowski, Thomas R and Tka{\v{c}}ik, Ga{\v{s}}per},
+	date-added = {2021-01-07 17:24:59 -0500},
+	date-modified = {2021-01-07 17:24:59 -0500},
+	journal = {bioRxiv},
+	pages = {848374},
+	publisher = {Cold Spring Harbor Laboratory},
+	title = {Statistical analysis and optimality of neural systems},
+	year = {2020}}
+
+@article{turner2007maximum,
+	author = {Turner, Richard and Sahani, Maneesh},
+	date-added = {2021-01-07 17:10:27 -0500},
+	date-modified = {2021-01-07 17:10:27 -0500},
+	journal = {Neural computation},
+	number = {4},
+	pages = {1022--1038},
+	publisher = {MIT Press},
+	title = {A maximum-likelihood interpretation for slow feature analysis},
+	volume = {19},
+	year = {2007}}
+
+@article{macke2011empirical,
+	author = {Macke, Jakob H and Buesing, Lars and Cunningham, John P and Yu, Byron M and Shenoy, Krishna V and Sahani, Maneesh},
+	date-added = {2021-01-07 16:58:12 -0500},
+	date-modified = {2021-01-07 16:58:12 -0500},
+	journal = {Advances in neural information processing systems},
+	pages = {1350--1358},
+	title = {Empirical models of spiking in neural populations},
+	volume = {24},
+	year = {2011}}
+
+@article{schneidman2006weak,
+	author = {Schneidman, Elad and Berry, Michael J and Segev, Ronen and Bialek, William},
+	date-added = {2021-01-07 16:56:50 -0500},
+	date-modified = {2021-01-07 16:56:50 -0500},
+	journal = {Nature},
+	number = {7087},
+	pages = {1007--1012},
+	publisher = {Nature Publishing Group},
+	title = {Weak pairwise correlations imply strongly correlated network states in a neural population},
+	volume = {440},
+	year = {2006}}
+
+@article{o2014cell,
+	author = {O'Leary, Timothy and Williams, Alex H and Franci, Alessio and Marder, Eve},
+	date-added = {2021-01-07 16:53:12 -0500},
+	date-modified = {2021-01-07 16:53:12 -0500},
+	journal = {Neuron},
+	number = {4},
+	pages = {809--821},
+	publisher = {Elsevier},
+	title = {Cell types, network homeostasis, and pathological compensation from a biologically plausible ion channel expression model},
+	volume = {82},
+	year = {2014}}
+
+@article{foster1993significance,
+	author = {Foster, WR and Ungar, LH and Schwaber, JS},
+	date-added = {2021-01-07 16:52:47 -0500},
+	date-modified = {2021-01-07 16:52:47 -0500},
+	journal = {Journal of neurophysiology},
+	number = {6},
+	pages = {2502--2518},
+	title = {Significance of conductances in Hodgkin-Huxley models},
+	volume = {70},
+	year = {1993}}
+
+@article{prinz2004similar,
+	author = {Prinz, Astrid A and Bucher, Dirk and Marder, Eve},
+	date-added = {2021-01-07 16:52:20 -0500},
+	date-modified = {2021-01-07 16:52:20 -0500},
+	journal = {Nature neuroscience},
+	number = {12},
+	pages = {1345--1352},
+	publisher = {Nature Publishing Group},
+	title = {Similar network activity from disparate circuit parameters},
+	volume = {7},
+	year = {2004}}
+
+@article{achard2006complex,
+	author = {Achard, Pablo and De Schutter, Erik},
+	date-added = {2021-01-07 16:51:15 -0500},
+	date-modified = {2021-01-07 16:51:15 -0500},
+	journal = {PLoS computational biology},
+	number = {7},
+	pages = {e94},
+	publisher = {Public Library of Science},
+	title = {Complex parameter landscape for a complex neuron model},
+	volume = {2},
+	year = {2006}}
+
+@article{alonso2019visualization,
+	author = {Alonso, Leandro M and Marder, Eve},
+	date-added = {2021-01-07 16:50:48 -0500},
+	date-modified = {2021-01-07 16:50:48 -0500},
+	journal = {Elife},
+	pages = {e42722},
+	publisher = {eLife Sciences Publications Limited},
+	title = {Visualization of currents in neural models with similar behavior and different conductance densities},
+	volume = {8},
+	year = {2019}}
+
+@article{sisson2007sequential,
+	author = {Sisson, Scott A and Fan, Yanan and Tanaka, Mark M},
+	date-added = {2021-01-07 15:41:21 -0500},
+	date-modified = {2021-01-07 15:41:21 -0500},
+	journal = {Proceedings of the National Academy of Sciences},
+	number = {6},
+	pages = {1760--1765},
+	publisher = {National Acad Sciences},
+	title = {Sequential monte carlo without likelihoods},
+	volume = {104},
+	year = {2007}}
 
 @article{li2020scalable,
 	author = {Li, Xuechen and Wong, Ting-Kam Leonard and Chen, Ricky TQ and Duvenaud, David},
