methods update and spell-check

--- a/written/eLifeRevision/eLife2020.bib
+++ b/written/eLifeRevision/eLife2020.bib
@@ -1,12 +1,130 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sean Bittner at 2021-01-07 17:25:01 -0500 
+%% Created for Sean Bittner at 2021-01-11 13:40:07 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{kingma2018glow,
+	author = {Kingma, Durk P and Dhariwal, Prafulla},
+	booktitle = {Advances in neural information processing systems},
+	date-added = {2021-01-11 13:40:04 -0500},
+	date-modified = {2021-01-11 13:40:04 -0500},
+	pages = {10215--10224},
+	title = {Glow: Generative flow with invertible 1x1 convolutions},
+	year = {2018}}
+
+@article{kingma2016improved,
+	author = {Kingma, Durk P and Salimans, Tim and Jozefowicz, Rafal and Chen, Xi and Sutskever, Ilya and Welling, Max},
+	date-added = {2021-01-11 13:37:48 -0500},
+	date-modified = {2021-01-11 13:37:48 -0500},
+	journal = {Advances in neural information processing systems},
+	pages = {4743--4751},
+	title = {Improved variational inference with inverse autoregressive flow},
+	volume = {29},
+	year = {2016}}
+
+@article{papamakarios2019normalizing,
+	author = {Papamakarios, George and Nalisnick, Eric and Rezende, Danilo Jimenez and Mohamed, Shakir and Lakshminarayanan, Balaji},
+	date-added = {2021-01-11 13:30:05 -0500},
+	date-modified = {2021-01-11 13:30:05 -0500},
+	journal = {arXiv preprint arXiv:1912.02762},
+	title = {Normalizing flows for probabilistic modeling and inference},
+	year = {2019}}
+
+@article{hastings1970monte,
+	author = {Hastings, W Keith},
+	date-added = {2021-01-11 12:28:25 -0500},
+	date-modified = {2021-01-11 12:28:25 -0500},
+	publisher = {Oxford University Press},
+	title = {Monte Carlo sampling methods using Markov chains and their applications},
+	year = {1970}}
+
+@article{metropolis1953equation,
+	author = {Metropolis, Nicholas and Rosenbluth, Arianna W and Rosenbluth, Marshall N and Teller, Augusta H and Teller, Edward},
+	date-added = {2021-01-11 12:28:01 -0500},
+	date-modified = {2021-01-11 12:28:01 -0500},
+	journal = {The journal of chemical physics},
+	number = {6},
+	pages = {1087--1092},
+	publisher = {American Institute of Physics},
+	title = {Equation of state calculations by fast computing machines},
+	volume = {21},
+	year = {1953}}
+
+@incollection{saul1998mean,
+	author = {Saul, Lawrence and Jordan, Michael},
+	booktitle = {Learning in graphical models},
+	date-added = {2021-01-11 12:26:56 -0500},
+	date-modified = {2021-01-11 12:26:56 -0500},
+	pages = {541--554},
+	publisher = {Springer},
+	title = {A mean field learning algorithm for unsupervised neural networks},
+	year = {1998}}
+
+@article{marjoram2003markov,
+	author = {Marjoram, Paul and Molitor, John and Plagnol, Vincent and Tavar{\'e}, Simon},
+	date-added = {2021-01-08 10:29:38 -0500},
+	date-modified = {2021-01-08 10:29:38 -0500},
+	journal = {Proceedings of the National Academy of Sciences},
+	number = {26},
+	pages = {15324--15328},
+	publisher = {National Acad Sciences},
+	title = {Markov chain Monte Carlo without likelihoods},
+	volume = {100},
+	year = {2003}}
+
+@article{bittner2019approximating,
+	author = {Bittner, Sean R and Cunningham, John P},
+	date-added = {2021-01-07 18:52:14 -0500},
+	date-modified = {2021-01-07 18:52:14 -0500},
+	journal = {arXiv preprint arXiv:1903.07515},
+	title = {Approximating exponential family models (not single distributions) with a two-network architecture},
+	year = {2019}}
+
+@inproceedings{papamakarios2019sequential,
+	author = {Papamakarios, George and Sterratt, David and Murray, Iain},
+	booktitle = {The 22nd International Conference on Artificial Intelligence and Statistics},
+	date-added = {2021-01-07 18:50:58 -0500},
+	date-modified = {2021-01-07 18:50:58 -0500},
+	organization = {PMLR},
+	pages = {837--848},
+	title = {Sequential neural likelihood: Fast likelihood-free inference with autoregressive flows},
+	year = {2019}}
+
+@inproceedings{hermans2020likelihood,
+	author = {Hermans, Joeri and Begy, Volodimir and Louppe, Gilles},
+	booktitle = {International Conference on Machine Learning},
+	date-added = {2021-01-07 18:50:21 -0500},
+	date-modified = {2021-01-07 18:50:21 -0500},
+	organization = {PMLR},
+	pages = {4239--4248},
+	title = {Likelihood-free mcmc with amortized approximate ratio estimators},
+	year = {2020}}
+
+@article{beaumont2002approximate,
+	author = {Beaumont, Mark A and Zhang, Wenyang and Balding, David J},
+	date-added = {2021-01-07 18:01:47 -0500},
+	date-modified = {2021-01-07 18:01:47 -0500},
+	journal = {Genetics},
+	number = {4},
+	pages = {2025--2035},
+	publisher = {Genetics Soc America},
+	title = {Approximate Bayesian computation in population genetics},
+	volume = {162},
+	year = {2002}}
+
+@article{cranmer2020frontier,
+	author = {Cranmer, Kyle and Brehmer, Johann and Louppe, Gilles},
+	date-added = {2021-01-07 18:00:11 -0500},
+	date-modified = {2021-01-07 18:00:11 -0500},
+	journal = {Proceedings of the National Academy of Sciences},
+	publisher = {National Acad Sciences},
+	title = {The frontier of simulation-based inference},
+	year = {2020}}
 
 @article{granot2013stimulus,
 	author = {Granot-Atedgi, Einat and Tka{\v{c}}ik, Ga{\v{s}}per and Segev, Ronen and Schneidman, Elad},
@@ -530,14 +648,6 @@
 	volume = {86},
 	year = {2015}}
 
-@article{dinh2016density,
-	author = {Dinh, Laurent and Sohl-Dickstein, Jascha and Bengio, Samy},
-	date-added = {2019-10-31 11:34:10 -0400},
-	date-modified = {2019-10-31 11:34:10 -0400},
-	journal = {arXiv preprint arXiv:1605.08803},
-	title = {Density estimation using real nvp},
-	year = {2016}}
-
 @inproceedings{papamakarios2017masked,
 	author = {Papamakarios, George and Pavlakou, Theo and Murray, Iain},
 	booktitle = {Advances in Neural Information Processing Systems},
@@ -901,16 +1011,6 @@
 	title = {Theoretical neuroscience rising},
 	volume = {60},
 	year = {2008}}
-
-@article{prinz2004similar,
-	author = {Prinz, Astrid A and Bucher, Dirk and Marder, Eve},
-	journal = {Nature neuroscience},
-	number = {12},
-	pages = {1345},
-	publisher = {Nature Publishing Group},
-	title = {Similar network activity from disparate circuit parameters},
-	volume = {7},
-	year = {2004}}
 
 @article{sussillo2014neural,
 	author = {Sussillo, David},
